fix kana card spacing

--- a/src/common/Card.css
+++ b/src/common/Card.css
@@ -13,11 +13,11 @@
   }
   
   &:hover {
-    & .card-front{
+    & .card-front:not(.empty) {
       transform: rotateY(180deg);
       opacity: 0.5;
     }
-    & .card-back{
+    & .card-back:not(.empty) {
       transform: rotateY(0);
       opacity: 1;
     }
@@ -26,7 +26,7 @@
   & > div {
     display: grid;
     font-size: var(--card-font-size);
-    transition: transform 0.5s, opacity 0.5s;
+    transition: transform 0.4s, opacity 0.4s;
     place-content: center;
     width: 100%;
     height: 100%;
@@ -44,5 +44,9 @@
     opacity: 0.5;
     position:absolute;
     transform: rotateY(-180deg);
+  }
+
+  & .empty {
+    opacity: 0.25;
   }
 }
